# OTTO

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh
include/: bitboard.h  board.h  engine.h  evaluation.h  game.h  movegen.h  openbook.h  search.h  transposition.h  typedefs.h  zobristhash.h
src/: BitBoard.cpp  BitBoard.h  Book.txt  CMakeLists.txt  Main.cpp  Makefile  MoveGen.cpp  MoveGen.h  OpenBook.cpp  OpenBook.h  Prog.cpp  README.md  Thread.cpp  Thread.h  Transposition.cpp  Transposition.h  ZobristHash.cpp  ZobristHash.h  bitboard.cpp  bitboard.h  board.cpp  engine.cpp  evaluation.cpp  evaluation.h  game.cpp  game.h  main.cpp  movegen.cpp  mt64.cpp  openbook.cpp  openbook.h  rtdfs  search.cpp  search.h  transposition.h  typedefs.h  zobristhash.cpp  zobristhash.h
test/: FenString.txt  benchmark.cpp  unittest.cpp
